styled form and finished project

--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #CFA5B4;
   min-height: 15vh;
   display: flex;
   flex-direction: column;
